--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -24,4 +24,30 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+} */
+.icon {
+  filter:grayscale(.3);
+  /* filter: sepia(30%) saturate(2000%) brightness(25%) hue-rotate(80deg); */
+}
+.spinner{
+  animation: spin 1s infinite linear;
+}
+@keyframes spin {
+  from {
+      transform: scale(1) rotate(0deg);
+  }
+  to {
+      transform: scale(1) rotate(360deg);
+  }
+}
+.fade{
+  animation: fadeIn 1600 ease-in ;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
